Attempt to fix font size on mobile, hopefully the last one

--- a/style.css
+++ b/style.css
@@ -30,20 +30,16 @@
 }
 
 * {
-	padding:     0;
-	margin:      0;
-	box-sizing:  border-box;
-	font-family: ibm;
-}
-
-html {
-	font-size: 16px;
+	padding:          0;
+	margin:           0;
+	box-sizing:       border-box;
+	font-family:      ibm;
+	text-size-adjust: none; /* Disable automatic text upscaling on mobile */
 }
 
 body {
 	color:       var(--color-fg);
 	font-weight: light;
-	font-size:   16px;
 
 	background-color:      #000;
 	background-attachment: fixed;
